added simple jumbotron and posts structure

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link href="css/styles.css" rel="stylesheet">
   </head>
+
   <body>
     <div class="navbar navbar-inverse navbar-static-top">
       <div class="container">
@@ -35,6 +36,19 @@
       </div>
     </div>
 
+    <div class="container">
+
+      <div class="jumbotron text-center" >
+        <h1>Welcome to Awesome Things!</h1>
+        <p>This is where I blog about things that I find particularly awesome.</p>
+      </div>
+
+    </div>
+    <div class="container">
+      <div id="posts">
+      </div>
+    </div>
+
     <div class="navbar navbar-default navbar-fixed-bottom">
 
       <div class="container">
@@ -52,4 +66,5 @@
 
     <script src="main.js"></script>
   </body>
+
 </html>
